# cpp_practice

./: README.md
autotools/: Makefile.am  build.sh  configure.ac  justdoit.cpp
cmake/: CMakeLists.txt  build.sh
const/: build.sh  main.cpp
heap/: build.sh  main.cpp
helloworld/: build.sh  helloworld  helloworld.c  helloworld.cpp
make/: Makefile  app1.cpp  app2.cpp  build.sh  f1.cpp  f1.hpp
separate_compilation_and_extern/: build.sh  h1.cpp  h1.hpp  main.cpp
static/: build.sh  main.cpp
undefined_behaviour/: Makefile  build.sh  main.cpp
